# constellate-labs

./: AGENTS.md  ENG_SPEC.md  README.md  pyproject.toml
experiment_notebooks/: 00_generate_svg_test.ipynb  02_pipeline_integration_test.ipynb
manual_test_notebooks/: 00_generate_text_w_gcp_test copy.ipynb  03_full_pipeline_test.ipynb  show.json
src/constellate_labs/: __init__.py  models.py
src/constellate_labs/pipeline/: __init__.py  runner.py  stage1_llm_svg.py  stage2_geometry.py  stage3_poisson.py  stage4_constraints.py  stage5_skybrush.py
src/constellate_labs/utils/: __init__.py  geometry.py  sampling.py  validation.py
tests/: __init__.py  test_example.py  test_models.py  test_pipeline.py  test_utils_geometry.py  test_utils_sampling.py  test_utils_validation.py
